<resources>
    <string name="app_name">Jon Foreman</string>
    <string name="action_settings">Settings</string>
    <string name="songsButton">Songs</string>
    <string name="videosButton">Videos</string>
    <string name="wallpapersButton">Wallpapers</string>
    <string name="mailingListButton">Register for my mailing list!</string>
    <string name="birthdayLabel">Date of Birth:</string>
    <string name="birthday">Oct 22, 1976</string>
    <string name="likesLabel">Likes:</string>
    <string name="likes">Guitar, Other things...</string>
    <string name="dislikesLabel">Dislikes:</string>
    <string name="dislikes">Death, Dark horses, Taxes</string>
    <string name="websiteLabel">Website:</string>
    <string name="website"><a href="http://www.jonforeman.com/?frontpage=true">jonforeman.com</a></string>
    <string name="socialMediaLabel">Social Media:</string>
    <string name="socialMediaFacebook"><a href="http://www.facebook.com/jonforeman">Facebook</a></string>
    <string name="socialMediaTwitter"><a href="http://twitter.com/jonforeman">Twitter</a></string>
    <string name="socialMediaYoutube"><a href="http://www.youtube.com/channel/UCkjWEDHO2Vit6U2lnRDDb7Q">YouTube</a></string>
    <string name="contactLabel">Contact Number:</string>
    <string name="contact">(412)-867-5309</string>
    <string name="emailLabel">Email:</string>
    <string name="email">jon@jonforeman.com</string>
    <string name="title_activity_song">SongActivity</string>
    <string name="title_activity_video">VideoActivity</string>
    <string name="title_activity_wallpaper">WallpaperActivity</string>
    <string name="emailTitle">Welcome to the Family!</string>
    <string name="emailMessage">Please enter your email below:</string>
    <string name="buttonAdd">Submit</string>
    <string name="buttonCancel">Cancel</string>
    <string name="songPrompt">Pick a song:</string>
    <string name="playSong">Play Song</string>
    <string name="pauseSong">Pause Song</string>
    <string name="restartSong">Resume Song</string>

    <string-array name="songOptions">
        <item>disappear</item>
        <item>music_file</item>
        <item>test_cbr</item>
    </string-array>

</resources>
