<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:fitsSystemWindows="true"
    tools:context=".HomeActivity">

    <android.support.design.widget.AppBarLayout android:layout_height="wrap_content"
        android:layout_width="match_parent" android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar android:id="@+id/toolbar"
            android:layout_width="match_parent" android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary" app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout android:layout_width="match_parent"
        android:layout_height="match_parent">


        <fragment
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:name="assignment3.jcnelson.partb.NavigationFragment"
            android:id="@+id/navigationFragment"
            tools:layout="@layout/fragment_navigation"/>

        <ImageView
            android:layout_width="200dp"
            android:layout_height="213dp"
            android:id="@+id/logoImage"
            android:layout_marginTop="57dp"
            android:src="@drawable/jon_foreman_image"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/birthdayLabel"
            android:id="@+id/birthdayLabel"
            android:layout_alignTop="@+id/logoImage"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/logoImage" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/birthday"
            android:id="@+id/birthday"
            android:layout_below="@+id/birthdayLabel"
            android:layout_toStartOf="@+id/logoImage" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/likesLabel"
            android:id="@+id/likesLabel"
            android:layout_below="@+id/birthday"
            android:layout_alignParentStart="true"
            android:phoneNumber="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/likes"
            android:id="@+id/likes"
            android:layout_below="@+id/likesLabel"
            android:layout_toStartOf="@+id/logoImage" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/dislikesLabel"
            android:id="@+id/dislikesLabel"
            android:layout_below="@+id/likes"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/dislikes"
            android:id="@+id/dislikes"
            android:layout_below="@+id/dislikesLabel"
            android:layout_toStartOf="@+id/logoImage" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/websiteLabel"
            android:id="@+id/websiteLabel"
            android:layout_below="@+id/dislikes"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/website"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:autoLink="web"
            android:gravity="center"
            android:text="@string/website"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_below="@+id/websiteLabel"
            android:layout_alignEnd="@+id/dislikes" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/socialMediaLabel"
            android:id="@+id/socialMediaLabel"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/socialMediaFacebook"
            android:id="@+id/facebook"
            android:autoLink="web"
            android:layout_below="@+id/socialMediaLabel"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/socialMediaTwitter"
            android:id="@+id/twitter"
            android:autoLink="web"
            android:layout_alignTop="@+id/facebook"
            android:layout_alignEnd="@+id/socialMediaLabel" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/socialMediaYoutube"
            android:id="@+id/youtube"
            android:autoLink="web"
            android:layout_alignTop="@+id/twitter"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/emailLabel"
            android:id="@+id/emailLabel"
            android:layout_below="@+id/facebook"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/email"
            android:id="@+id/email"
            android:layout_below="@+id/emailLabel"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/contactLabel"
            android:id="@+id/contactLabel"
            android:layout_below="@+id/email"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/contact"
            android:id="@+id/contact"
            android:layout_below="@+id/contactLabel"
            android:layout_alignParentStart="true" />
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>
